# pool-based-liquidity-protocol

./: Cargo.toml  LICENSE  README.md  lib.rs  package.json  redspot.config.ts
artifacts/: btoken_contract.contract  btoken_contract.json  liquidity_pool_manager_contract.contract  liquidity_pool_manager_contract.json  loan_contract.contract  loan_contract.json  stablecoin_contract.contract  stablecoin_contract.json
contracts/: Cargo.toml  lib.rs
contracts/token/: mod.rs
contracts/traits/: mod.rs
project/: Cargo.toml
project/contracts/: mod.rs
project/contracts/btoken/: Cargo.toml  lib.rs
project/contracts/liquidity_pool_manager/: Cargo.toml  lib.rs
project/contracts/loan/: Cargo.toml  lib.rs
project/contracts/stablecoin/: Cargo.toml  lib.rs
project/traits/: btoken.rs  liquidity_pool_manager.rs  loan.rs  mod.rs  stablecoin.rs
tests/: test.ts
