[package]
name = "btoken_contract"
authors = ["Richard Gazdik <xgazdik@stuba.sk>"]
version = "1.0.0"
edition = "2021"

[dependencies]
ink_primitives = {tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false}
ink_metadata = {tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true}
ink_env = {tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false}
ink_storage = {tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false}
ink_lang = {tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false}
ink_prelude = {tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false}
scale = {package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"]}
scale-info = {version = "2", default-features = false, features = ["derive"], optional = true}
brush = {path = "../../..", default-features = false, features = ["ownable", "psp22"]}
liquidity_pool_protocol = {path = "../..", default-features = false}

[lib]
name = "btoken_contract"
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "brush/std",
    "liquidity_pool_protocol/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
